Melhoria documentacao e CORS
Atualizacao do README
Correcao do caminho do JSON
Adicao do Middleware CORS para requisicoes Cross-Origin
